--- a/libft/Makefile
+++ b/libft/Makefile
@@ -36,7 +36,7 @@ OBJS		= $(SRCS:.c=.o)
 all: $(NAME)
 
 %.o: %.c libft.h
-	$(CC) -c -o $@ $< $(CFLAGS)
+	@$(CC) -c -o $@ $< $(CFLAGS)
 
 $(NAME): $(OBJS)
 	@$(AR) rcs $(NAME) $(OBJS)
