--- a/libft/Makefile
+++ b/libft/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: mrezki <mrezki@student.42.fr>              +#+  +:+       +#+         #
+#    By: yel-yaqi <yel-yaqi@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/11/02 05:47:36 by mrezki            #+#    #+#              #
-#    Updated: 2024/02/17 14:27:37 by mrezki           ###   ########.fr        #
+#    Updated: 2024/08/04 01:59:58 by yel-yaqi         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -36,10 +36,10 @@ OBJS		= $(SRCS:.c=.o)
 all: $(NAME)
 
 %.o: %.c libft.h
-	@$(CC) -c -o $@ $< $(CFLAGS)
+	$(CC) -c -o $@ $< $(CFLAGS)
 
 $(NAME): $(OBJS)
-	@$(AR) rcs $(NAME) $(OBJS)
+	$(AR) rcs $(NAME) $(OBJS)
 
 clean:
 	@$(RM) $(OBJS)
